--- a/digital-agency-design-system-vue/src/assets/style/mixins/mixins.scss
+++ b/digital-agency-design-system-vue/src/assets/style/mixins/mixins.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 @use "../variables/variables.scss" as *;
 
 $breakPoints: (
@@ -21,4 +22,8 @@ $breakPoints: (
   @media screen and (min-width: map-get($breakPoints,$breakPoint)) {
     @content;
   }
+}
+
+@function pxToRem($px) {
+  @return #{math.div($px, 16)}rem;
 }
