タイポグラフィ周りのアップデート

--- a/digital-agency-design-system-vue/src/assets/style/basic/basicStyle.scss
+++ b/digital-agency-design-system-vue/src/assets/style/basic/basicStyle.scss
@@ -186,7 +186,7 @@ a {
   letter-spacing: 0.02em;
 }
 
-.fontSupporM {
+.fontSupportM {
   font-size: pxToRem(10);
   font-weight: var(--weight-regular);
   line-height: 1.7;
