px指定をミックスインに変更

--- a/digital-agency-design-system-vue/src/assets/style/basic/basicStyle.scss
+++ b/digital-agency-design-system-vue/src/assets/style/basic/basicStyle.scss
@@ -45,7 +45,7 @@ body {
 }
 
 table {
-  font-size: 1rem;
+  font-size: pxToRem(16);
   color: var(--color-text-body);
   table-layout: fixed;
   border-collapse: collapse;
