アコーディオンコンポーネントの基本形作成

--- a/digital-agency-design-system-vue/src/assets/style/color/semanticColors.scss
+++ b/digital-agency-design-system-vue/src/assets/style/color/semanticColors.scss
@@ -145,7 +145,7 @@
 
     /* Border */
     --color-border-field: var(--color-white);
-    --color-boder-divider: var(--color-sumi-700);
+    --color-border-divider: var(--color-sumi-700);
     --color-border-focused: var(--color-wood-600);
     --color-border-selected: var(--color-sea-300);
     --color-border-alert: var(--color-sun-500);
@@ -240,7 +240,7 @@
 
   /* Border */
   --color-border-field: var(--color-white);
-  --color-boder-divider: var(--color-sumi-700);
+  --color-border-divider: var(--color-sumi-700);
   --color-border-focused: var(--color-wood-500);
   --color-border-selected: var(--color-sea-300);
   --color-border-alert: var(--color-sun-500);
