イージングの調整

--- a/digital-agency-design-system-vue/src/assets/style/easing/easing.scss
+++ b/digital-agency-design-system-vue/src/assets/style/easing/easing.scss
@@ -10,5 +10,6 @@
   --easing-out-quat: cubic-bezier(0.25, 1, 0.5, 1);
   --easing-in-out-quat: cubic-bezier(0.76, 0, 0.24, 1);
   --easing-out-expo: cubic-bezier(0.16, 1, 0.3, 1);
+  --easing-in-expo: cubic-bezier(0.7, 0, 0.84, 0);
   --easing-in-out-expo: cubic-bezier(0.87, 0, 0.13, 1);
 }
