--- a/digital-agency-design-system-vue/src/assets/style/variables/variables.scss
+++ b/digital-agency-design-system-vue/src/assets/style/variables/variables.scss
@@ -1,5 +1,2 @@
-// モバイルとタブレットのブレークポイント
-$mobileBreakPoint: "520px";
-
-// タブレットとデスクトップのブレークポイント
-$tabletBreakPoint: "960px";
+// モバイルとデスクトップのブレークポイント
+$mobileBreakPoint: 768;
