モバイル版のヘッダーメニューの調整

--- a/digital-agency-design-system-vue/src/assets/style/basic/basicStyle.scss
+++ b/digital-agency-design-system-vue/src/assets/style/basic/basicStyle.scss
@@ -24,7 +24,7 @@ body {
 
 /* スクロールバーのガタツキ対策。#appなどのコンテンツ全体のラッパーに適用する。js側で動的にscrollbar-gutterプロパティを入れる */
 .scrollbar-gutter {
-  overflow: auto;
+  overflow: visible;
 }
 
 /* 見た目には不可視だが、スクリーンリーダーには読み上げられるようにするスタイル */
