--- a/digital-agency-design-system-vue/src/assets/style/color/primitiveColors.scss
+++ b/digital-agency-design-system-vue/src/assets/style/color/primitiveColors.scss
@@ -67,4 +67,51 @@
   --color-sun-200: #ffa28b;
   --color-sun-100: #ffc8b8;
   --color-sun-50: #ffe7e6;
+
+  /* プリミティブカラー2.0 */
+
+  /* Blue */
+  --color-bule-50: #e8f1fe;
+  --color-bule-100: #d9e6ff;
+  --color-bule-200: #c5d7fb;
+  --color-bule-300: #9db7f9;
+  --color-bule-400: #7096f8;
+  --color-bule-500: #4979f5;
+  --color-bule-600: #3460fb;
+  --color-bule-700: #264af4;
+  --color-bule-800: #0031d8;
+  --color-bule-900: #0017c1;
+  --color-bule-1000: #00118f;
+  --color-bule-1100: #000071;
+  --color-bule-1200: #000060;
+
+  /* Light Blue */
+  --color-light-blue-50: #f0f9ff;
+  --color-light-blue-100: #dcf0ff;
+  --color-light-blue-200: #c0e4ff;
+  --color-light-blue-300: #97d3ff;
+  --color-light-blue-400: #57b8ff;
+  --color-light-blue-500: #39abff;
+  --color-light-blue-600: #008bf2;
+  --color-light-blue-700: #0877d7;
+  --color-light-blue-800: #0066be;
+  --color-light-blue-900: #0055ad;
+  --color-light-blue-1000: #00428c;
+  --color-light-blue-1100: #00316a;
+  --color-light-blue-1200: #00234b;
+
+  /* Cyan */
+  --color-light-cyan-50: #e6fcff;
+  --color-light-cyan-100: #c8f8ff;
+  --color-light-cyan-200: #99f2ff;
+  --color-light-cyan-300: #79e2f2;
+  --color-light-cyan-400: #2bc8e4;
+  --color-light-cyan-500: #01b7d6;
+  --color-light-cyan-600: #00a3bf;
+  --color-light-cyan-700: #008da6;
+  --color-light-cyan-800: #008299;
+  --color-light-cyan-900: #006f83;
+  --color-light-cyan-1000: #006173;
+  --color-light-cyan-1100: #004c59;
+  --color-light-cyan-1200: #003741;
 }
