プリミティブカラー2.0 green lime yellow追加

--- a/digital-agency-design-system-vue/src/assets/style/color/primitiveColors.scss
+++ b/digital-agency-design-system-vue/src/assets/style/color/primitiveColors.scss
@@ -101,17 +101,63 @@
   --color-light-blue-1200: #00234b;
 
   /* Cyan */
-  --color-light-cyan-50: #e6fcff;
-  --color-light-cyan-100: #c8f8ff;
-  --color-light-cyan-200: #99f2ff;
-  --color-light-cyan-300: #79e2f2;
-  --color-light-cyan-400: #2bc8e4;
-  --color-light-cyan-500: #01b7d6;
-  --color-light-cyan-600: #00a3bf;
-  --color-light-cyan-700: #008da6;
-  --color-light-cyan-800: #008299;
-  --color-light-cyan-900: #006f83;
-  --color-light-cyan-1000: #006173;
-  --color-light-cyan-1100: #004c59;
-  --color-light-cyan-1200: #003741;
+  --color-cyan-50: #e6fcff;
+  --color-cyan-100: #c8f8ff;
+  --color-cyan-200: #99f2ff;
+  --color-cyan-300: #79e2f2;
+  --color-cyan-400: #2bc8e4;
+  --color-cyan-500: #01b7d6;
+  --color-cyan-600: #00a3bf;
+  --color-cyan-700: #008da6;
+  --color-cyan-800: #008299;
+  --color-cyan-900: #006f83;
+  --color-cyan-1000: #006173;
+  --color-cyan-1100: #004c59;
+  --color-cyan-1200: #003741;
+
+  /* Green */
+  --color-green-50: #E6F5EC;
+  --color-green-100: #C2E5D1;
+  --color-green-200: #9BD4B5;
+  --color-green-300: #71C598;
+  --color-green-400: #51B883;
+  --color-green-500: #2CAC6E;
+  --color-green-600: #259D63;
+  --color-green-700: #1D8B56;
+  --color-green-800: #197A4B;
+  --color-green-900: #115A36;
+  --color-green-1000: #0C472A;
+  --color-green-1100: #08351F;
+  --color-green-1200: #032213;
+
+  /* Lime */
+  ---color-lime-50: #EBFAD9;
+  ---color-lime-100: #D0F5A2;
+  ---color-lime-200: #C0F354;
+  ---color-lime-300: #ADE830;
+  ---color-lime-400: #9DDD15;
+  ---color-lime-500: #8CC80C;
+  ---color-lime-600: #7EB40D;
+  ---color-lime-700: #6FA104;
+  ---color-lime-800: #618E00;
+  ---color-lime-900: #507500;
+  ---color-lime-1000: #3E5A00;
+  ---color-lime-1100: #2C4100;
+  ---color-lime-1200: #1E2D00;
+
+  /* Yellow */
+  --color-yellow-50: #FBF5E0;
+  --color-yellow-100: #FFF0B3;
+  --color-yellow-200: #FFE380;
+  --color-yellow-300: #FFD43D;
+  --color-yellow-400: #FFC700;
+  --color-yellow-500: #EBB700;
+  --color-yellow-600: #D2A400;
+  --color-yellow-700: #B78F00;
+  --color-yellow-800: #A58000;
+  --color-yellow-900: #927200;
+  --color-yellow-1000: #806300;
+  --color-yellow-1100: #6E5600;
+  --color-yellow-1200: #604B00;
+
 }
