--- a/digital-agency-design-system-vue/src/assets/style/color/primitiveColors.scss
+++ b/digital-agency-design-system-vue/src/assets/style/color/primitiveColors.scss
@@ -6,6 +6,9 @@
   /* White */
   --color-white: #fff;
 
+  /* Black */
+  --color-black: #000;
+
   /* Sea */
   --color-sea-900: #000082;
   --color-sea-800-dark: #000f7f;
@@ -70,6 +73,20 @@
 
   /* プリミティブカラー2.0 */
 
+  /* Grey */
+  --color-grey-50: #f2f2f2;
+  --color-grey-100: #e6e6e6;
+  --color-grey-200: #cccccc;
+  --color-grey-300: #b3b3b3;
+  --color-grey-400: #999999;
+  --color-grey-417: #959595;
+  --color-grey-500: #7f7f7f;
+  --color-grey-536: #767676;
+  --color-grey-600: #666666;
+  --color-grey-700: #4d4d4d;
+  --color-grey-800: #333333;
+  --color-grey-900: #1a1a1a;
+
   /* Blue */
   --color-bule-50: #e8f1fe;
   --color-bule-100: #d9e6ff;
@@ -116,48 +133,107 @@
   --color-cyan-1200: #003741;
 
   /* Green */
-  --color-green-50: #E6F5EC;
-  --color-green-100: #C2E5D1;
-  --color-green-200: #9BD4B5;
-  --color-green-300: #71C598;
-  --color-green-400: #51B883;
-  --color-green-500: #2CAC6E;
-  --color-green-600: #259D63;
-  --color-green-700: #1D8B56;
-  --color-green-800: #197A4B;
-  --color-green-900: #115A36;
-  --color-green-1000: #0C472A;
-  --color-green-1100: #08351F;
+  --color-green-50: #e6f5ec;
+  --color-green-100: #c2e5d1;
+  --color-green-200: #9bd4b5;
+  --color-green-300: #71c598;
+  --color-green-400: #51b883;
+  --color-green-500: #2cac6e;
+  --color-green-600: #259d63;
+  --color-green-700: #1d8b56;
+  --color-green-800: #197a4b;
+  --color-green-900: #115a36;
+  --color-green-1000: #0c472a;
+  --color-green-1100: #08351f;
   --color-green-1200: #032213;
 
   /* Lime */
-  ---color-lime-50: #EBFAD9;
-  ---color-lime-100: #D0F5A2;
-  ---color-lime-200: #C0F354;
-  ---color-lime-300: #ADE830;
-  ---color-lime-400: #9DDD15;
-  ---color-lime-500: #8CC80C;
-  ---color-lime-600: #7EB40D;
-  ---color-lime-700: #6FA104;
-  ---color-lime-800: #618E00;
+  ---color-lime-50: #ebfad9;
+  ---color-lime-100: #d0f5a2;
+  ---color-lime-200: #c0f354;
+  ---color-lime-300: #ade830;
+  ---color-lime-400: #9ddd15;
+  ---color-lime-500: #8cc80c;
+  ---color-lime-600: #7eb40d;
+  ---color-lime-700: #6fa104;
+  ---color-lime-800: #618e00;
   ---color-lime-900: #507500;
-  ---color-lime-1000: #3E5A00;
-  ---color-lime-1100: #2C4100;
-  ---color-lime-1200: #1E2D00;
+  ---color-lime-1000: #3e5a00;
+  ---color-lime-1100: #2c4100;
+  ---color-lime-1200: #1e2d00;
 
   /* Yellow */
-  --color-yellow-50: #FBF5E0;
-  --color-yellow-100: #FFF0B3;
-  --color-yellow-200: #FFE380;
-  --color-yellow-300: #FFD43D;
-  --color-yellow-400: #FFC700;
-  --color-yellow-500: #EBB700;
-  --color-yellow-600: #D2A400;
-  --color-yellow-700: #B78F00;
-  --color-yellow-800: #A58000;
+  --color-yellow-50: #fbf5e0;
+  --color-yellow-100: #fff0b3;
+  --color-yellow-200: #ffe380;
+  --color-yellow-300: #ffd43d;
+  --color-yellow-400: #ffc700;
+  --color-yellow-500: #ebb700;
+  --color-yellow-600: #d2a400;
+  --color-yellow-700: #b78f00;
+  --color-yellow-800: #a58000;
   --color-yellow-900: #927200;
   --color-yellow-1000: #806300;
-  --color-yellow-1100: #6E5600;
-  --color-yellow-1200: #604B00;
+  --color-yellow-1100: #6e5600;
+  --color-yellow-1200: #604b00;
 
+  /* Orange */
+  --color-orange-50: #ffeee2;
+  --color-orange-100: #ffdfca;
+  --color-orange-200: #ffc199;
+  --color-orange-300: #ffa66d;
+  --color-orange-400: #ff8d44;
+  --color-orange-500: #ff7628;
+  --color-orange-600: #fb5b01;
+  --color-orange-700: #e25100;
+  --color-orange-800: #c74700;
+  --color-orange-900: #ac3e00;
+  --color-orange-1000: #8b3200;
+  --color-orange-1100: #6d2700;
+  --color-orange-1200: #541e00;
+
+  /* Red */
+  --color-red-50: #fdeeee;
+  --color-red-100: #ffdada;
+  --color-red-200: #ffbbbb;
+  --color-red-300: #ff9696;
+  --color-red-400: #ff7171;
+  --color-red-500: #ff5454;
+  --color-red-600: #fe3939;
+  --color-red-700: #fa0000;
+  --color-red-800: #ec0000;
+  --color-red-900: #ce0000;
+  --color-red-1000: #a90000;
+  --color-red-1100: #850000;
+  --color-red-1200: #620000;
+
+  /* Magenta */
+  --color-red-50: #f3e5f4;
+  --color-red-100: #ffd0ff;
+  --color-red-200: #ffaeff;
+  --color-red-300: #ff8eff;
+  --color-red-400: #f661f6;
+  --color-red-500: #f137f1;
+  --color-red-600: #db00db;
+  --color-red-700: #c000c0;
+  --color-red-800: #aa00aa;
+  --color-red-900: #8b008b;
+  --color-red-1000: #6c006c;
+  --color-red-1100: #500050;
+  --color-red-1200: #3b003b;
+
+  /* Purple*/
+  --color-red-50: #f1eafa;
+  --color-red-100: #ecddff;
+  --color-red-200: #ddc2ff;
+  --color-red-300: #cda6ff;
+  --color-red-400: #bb87ff;
+  --color-red-500: #a565f8;
+  --color-red-600: #8843e1;
+  --color-red-700: #6f23d0;
+  --color-red-800: #5c10be;
+  --color-red-900: #5109ad;
+  --color-red-1000: #41048e;
+  --color-red-1100: #30016c;
+  --color-red-1200: #21004b;
 }
