カラー名の誤りの修正

--- a/digital-agency-design-system-vue/src/assets/style/color/primitiveColors.scss
+++ b/digital-agency-design-system-vue/src/assets/style/color/primitiveColors.scss
@@ -76,31 +76,31 @@
   /* Grey */
   --color-grey-50: #f2f2f2;
   --color-grey-100: #e6e6e6;
-  --color-grey-200: #cccccc;
+  --color-grey-200: #ccc;
   --color-grey-300: #b3b3b3;
-  --color-grey-400: #999999;
+  --color-grey-400: #999;
   --color-grey-417: #959595;
   --color-grey-500: #7f7f7f;
   --color-grey-536: #767676;
-  --color-grey-600: #666666;
+  --color-grey-600: #666;
   --color-grey-700: #4d4d4d;
-  --color-grey-800: #333333;
+  --color-grey-800: #333;
   --color-grey-900: #1a1a1a;
 
   /* Blue */
-  --color-bule-50: #e8f1fe;
-  --color-bule-100: #d9e6ff;
-  --color-bule-200: #c5d7fb;
-  --color-bule-300: #9db7f9;
-  --color-bule-400: #7096f8;
-  --color-bule-500: #4979f5;
-  --color-bule-600: #3460fb;
-  --color-bule-700: #264af4;
-  --color-bule-800: #0031d8;
-  --color-bule-900: #0017c1;
-  --color-bule-1000: #00118f;
-  --color-bule-1100: #000071;
-  --color-bule-1200: #000060;
+  --color-blue-50: #e8f1fe;
+  --color-blue-100: #d9e6ff;
+  --color-blue-200: #c5d7fb;
+  --color-blue-300: #9db7f9;
+  --color-blue-400: #7096f8;
+  --color-blue-500: #4979f5;
+  --color-blue-600: #3460fb;
+  --color-blue-700: #264af4;
+  --color-blue-800: #0031d8;
+  --color-blue-900: #0017c1;
+  --color-blue-1000: #00118f;
+  --color-blue-1100: #000071;
+  --color-blue-1200: #000060;
 
   /* Light Blue */
   --color-light-blue-50: #f0f9ff;
@@ -195,7 +195,7 @@
   /* Red */
   --color-red-50: #fdeeee;
   --color-red-100: #ffdada;
-  --color-red-200: #ffbbbb;
+  --color-red-200: #fbb;
   --color-red-300: #ff9696;
   --color-red-400: #ff7171;
   --color-red-500: #ff5454;
@@ -208,32 +208,32 @@
   --color-red-1200: #620000;
 
   /* Magenta */
-  --color-red-50: #f3e5f4;
-  --color-red-100: #ffd0ff;
-  --color-red-200: #ffaeff;
-  --color-red-300: #ff8eff;
-  --color-red-400: #f661f6;
-  --color-red-500: #f137f1;
-  --color-red-600: #db00db;
-  --color-red-700: #c000c0;
-  --color-red-800: #aa00aa;
-  --color-red-900: #8b008b;
-  --color-red-1000: #6c006c;
-  --color-red-1100: #500050;
-  --color-red-1200: #3b003b;
+  --color-magenta-50: #f3e5f4;
+  --color-magenta-100: #ffd0ff;
+  --color-magenta-200: #ffaeff;
+  --color-magenta-300: #ff8eff;
+  --color-magenta-400: #f661f6;
+  --color-magenta-500: #f137f1;
+  --color-magenta-600: #db00db;
+  --color-magenta-700: #c000c0;
+  --color-magenta-800: #a0a;
+  --color-magenta-900: #8b008b;
+  --color-magenta-1000: #6c006c;
+  --color-magenta-1100: #500050;
+  --color-magenta-1200: #3b003b;
 
-  /* Purple*/
-  --color-red-50: #f1eafa;
-  --color-red-100: #ecddff;
-  --color-red-200: #ddc2ff;
-  --color-red-300: #cda6ff;
-  --color-red-400: #bb87ff;
-  --color-red-500: #a565f8;
-  --color-red-600: #8843e1;
-  --color-red-700: #6f23d0;
-  --color-red-800: #5c10be;
-  --color-red-900: #5109ad;
-  --color-red-1000: #41048e;
-  --color-red-1100: #30016c;
-  --color-red-1200: #21004b;
+  /* Purple */
+  --color-purple-50: #f1eafa;
+  --color-purple-100: #ecddff;
+  --color-purple-200: #ddc2ff;
+  --color-purple-300: #cda6ff;
+  --color-purple-400: #bb87ff;
+  --color-purple-500: #a565f8;
+  --color-purple-600: #8843e1;
+  --color-purple-700: #6f23d0;
+  --color-purple-800: #5c10be;
+  --color-purple-900: #5109ad;
+  --color-purple-1000: #41048e;
+  --color-purple-1100: #30016c;
+  --color-purple-1200: #21004b;
 }
