プリミティブカラーのアップデート

--- a/digital-agency-design-system-vue/src/assets/style/color/primitiveColors.scss
+++ b/digital-agency-design-system-vue/src/assets/style/color/primitiveColors.scss
@@ -10,6 +10,9 @@
   --color-black: #000;
 
   /* Sea */
+  --color-sea-1200: #00004f;
+  --color-sea-1100: #000060;
+  --color-sea-1000: #000071;
   --color-sea-900: #000082;
   --color-sea-800-dark: #000f7f;
   --color-sea-800: #0017c1;
@@ -24,6 +27,9 @@
   --color-sea-50: #e8f1fe;
 
   /* Sumi */
+  --color-sumi-1200: #000;
+  --color-sumi-1100: #080808;
+  --color-sumi-1000: #111;
   --color-sumi-900: #1a1a1c;
   --color-sumi-800: #414143;
   --color-sumi-700: #626264;
@@ -36,6 +42,9 @@
   --color-sumi-50: #f8f8fb;
 
   /* Forest */
+  --color-forest-1200: #032213;
+  --color-forest-1100: #08351f;
+  --color-forest-1000: #0c472a;
   --color-forest-900: #115a36;
   --color-forest-800: #197a4b;
   --color-forest-700: #1d8b56;
@@ -48,6 +57,9 @@
   --color-forest-50: #e6f5ec;
 
   /* Wood */
+  --color-wood-1200: #662e00;
+  --color-wood-1100: #833b00;
+  --color-wood-1000: #9c4600;
   --color-wood-900: #b65200;
   --color-wood-800: #c16800;
   --color-wood-700: #c87504;
@@ -60,6 +72,9 @@
   --color-wood-50: #f3eee5;
 
   /* Sun */
+  --color-sun-1200: #640101;
+  --color-sun-1100: #890101;
+  --color-sun-1000: #af0000;
   --color-sun-900: #d50000;
   --color-sun-800: #ec0000;
   --color-sun-700: #fa1606;
