チェックボックスのストーリー作成

--- a/.storybook/previewStyle.scss
+++ b/.storybook/previewStyle.scss
@@ -7,3 +7,13 @@ body {
 #storybook-docs .sbdocs-content .docs-story {
   background-color: var(--color-background-primary) !important;
 }
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  clip-path: polygon(0 0, 0 0, 0 0, 0 0);
+  border: 0;
+}
