セマンティックカラーの修正

--- a/src/assets/style/color/semanticColors.scss
+++ b/src/assets/style/color/semanticColors.scss
@@ -39,9 +39,9 @@
   --color-icon-light-label: var(--color-sumi-900);
   --color-icon-dark-label: var(--color-white);
   --color-icon-label: var(--color-sumi-900);
-  --color-icon-light-active: var(--color-sumi-800);
-  --color-icon-dark-active: var(--color-sumi-300);
-  --color-icon-active: var(--color-sumi-800);
+  --color-icon-light-active: var(--color-sea-800);
+  --color-icon-dark-active: var(--color-sea-300);
+  --color-icon-active: var(--color-sea-800);
   --color-icon-light-alert: var(--color-sun-800);
   --color-icon-dark-alert: var(--color-sun-500);
   --color-icon-alert: var(--color-sun-800);
