ラジオボタンのストーリー作成

--- a/.storybook/previewStyle.scss
+++ b/.storybook/previewStyle.scss
@@ -4,6 +4,12 @@ body {
   background-color: var(--color-background-primary);
 }
 
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 #storybook-docs .sbdocs-content .docs-story {
   background-color: var(--color-background-primary) !important;
 }
