スタイルの修正

--- a/.storybook/previewStyle.scss
+++ b/.storybook/previewStyle.scss
@@ -1,5 +1,6 @@
 body {
   font-family: "Noto Sans JP", sans-serif;
+  color: var(--color-text-body);
   background-color: var(--color-background-primary);
 }
 
