--- a/src/components/styles/basicButtonStyle.scss
+++ b/src/components/styles/basicButtonStyle.scss
@@ -1,6 +1,11 @@
+@use "@/assets/style/utils/utils.scss" as *;
+
 button {
-  display: block;
-  padding: 15px 32px;
+  position: relative;
+  z-index: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-family: inherit;
   font-size: pxToRem(16);
   font-weight: var(--weight-bold);
@@ -15,8 +20,14 @@ button {
     color var(--base-duration) var(--easing-out-expo),
     border-color var(--base-duration) var(--easing-out-expo);
 
-  .labelText {
-    color: inherit;
+  &::before {
+    position: absolute;
+    z-index: -1;
+    display: block;
+    width: 100%;
+    height: 100%;
+    min-height: 44px;
+    content: "";
   }
 
   &:focus-visible {
@@ -99,4 +110,33 @@ button {
       text-decoration: underline;
     }
   }
+
+  &.large {
+    min-width: 136px;
+    height: 56px;
+    padding: 16px 43px;
+  }
+
+  &.medium {
+    min-width: 96px;
+    height: 48px;
+    padding: 12px 23px;
+  }
+
+  &.small {
+    min-width: 80px;
+    height: 36px;
+    padding: 6px 15px;
+  }
+
+  &.x-small {
+    min-width: 72px;
+    height: 28px;
+    padding: 7px 14px;
+    font-size: pxToRem(14);
+  }
+}
+
+.labelText {
+  color: inherit;
 }
