--- a/src/components/styles/resourceListStyle.scss
+++ b/src/components/styles/resourceListStyle.scss
@@ -15,6 +15,7 @@
   appearance: none;
   background: none;
   border: none;
+  border-bottom: 1px solid #949494;
   transition: background-color var(--base-duration) var(--easing-out-expo);
 }
 
