セマンティックカラーのアップデート

--- a/src/assets/style/color/primitiveColors.scss
+++ b/src/assets/style/color/primitiveColors.scss
@@ -46,7 +46,7 @@
   --color-forest-900: #115a36;
   --color-forest-800: #197a4b;
   --color-forest-700: #1d8b56;
-  --color-forest-600: #259d63;
+  --color-green-600: #259d63;
   --color-forest-500: #2cac6e;
   --color-forest-400: #51b883;
   --color-forest-300: #71c598;
@@ -86,13 +86,13 @@
 
   /* プリミティブカラー2.0 */
 
-  /* Grey */
+  /* Neutral */
   --color-grey-50: #f2f2f2;
   --color-grey-100: #e6e6e6;
   --color-grey-200: #ccc;
   --color-grey-300: #b3b3b3;
   --color-grey-400: #999;
-  --color-grey-417: #959595;
+  --color-grey-420: #949494;
   --color-grey-500: #7f7f7f;
   --color-grey-536: #767676;
   --color-grey-600: #666;
