ノーティフィケーションバナーのアップデート

--- a/src/assets/style/color/primitiveColors.scss
+++ b/src/assets/style/color/primitiveColors.scss
@@ -46,7 +46,7 @@
   --color-forest-900: #115a36;
   --color-forest-800: #197a4b;
   --color-forest-700: #1d8b56;
-  --color-green-600: #259d63;
+  --color-forest-600: #259d63;
   --color-forest-500: #2cac6e;
   --color-forest-400: #51b883;
   --color-forest-300: #71c598;
