--- a/src/assets/style/fonts/font.scss
+++ b/src/assets/style/fonts/font.scss
@@ -5,7 +5,7 @@
  * フォントウェイトのセマンティクスな変数
  */
 :root {
-  --weight-regular: 400;
+  --weight-normal: 400;
   --weight-medium: 500;
   --weight-bold: 700;
 }
