--- a/src/assets/style/fonts/font.scss
+++ b/src/assets/style/fonts/font.scss
@@ -1,5 +1,6 @@
 @import "https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap";
 @import "https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@40,300,0,0";
+@import "https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@100..900&display=swap";
 
 /**
  * フォントウェイトのセマンティクスな変数
