タイポグラフィの修正

--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -5,6 +5,9 @@
 /** Fonts */
 @use "./fonts/font.scss";
 
+/** Typography */
+@use "./typography/typography.scss";
+
 /* Easing */
 @use "./easing/easing.scss";
 
